# neurons

./: .gitignore  DATASETS.md  GLYPH.md  README.md  TRAINING.md  pyproject.toml  requirements.txt
configs/: combine.yaml  cremi3d.yaml  default.yaml  foundation.yaml  microns.yaml  snemi2d.yaml  snemi3d.yaml
doc/: DATASETS.md  TRAINING.md  VISUALIZER.md
neurons/: __init__.py
neurons/callbacks/: __init__.py  tensorboard.py
neurons/datamodules/: __init__.py  base.py  combine.py  cremi3d.py  microns.py  mitoem2.py  snemi3d.py
neurons/datasets/: __init__.py  base.py  cremi3d.py  microns.py  mitoem2.py  snemi3d.py
neurons/inference/: __init__.py  sliding_window.py  soft_clustering.py  stitcher.py
neurons/losses/: __init__.py  boundary.py  discriminative.py  skeletonize.py  vista2d_losses.py  vista3d_losses.py  weighted_boundary.py
neurons/metrics/: __init__.py  instance.py  semantic.py
neurons/models/: __init__.py  base.py  point_prompt_encoder.py  segresnet.py  vista2d_model.py  vista3d.py  vista3d_model.py
neurons/modules/: __init__.py  affinity_seg.py  instance_seg.py  (+3 more)
notebooks/: 01_explore_snemi3d.ipynb  02_explore_cremi3d.ipynb  03_explore_microns.ipynb  terminology.md
scripts/: download_cremi3d.py  download_microns.py  download_microns_multimip.py  download_mitoem2.py  download_snemi3d.py  generate_method.py  generate_teaser.py  infer_vista3d.py  train.py
tests/: __init__.py  test_datamodules.py  test_datasets.py  test_iterative.py  test_losses.py  test_models.py  test_modules.py  test_preprocessors.py  test_transforms.py  test_utils.py
(+21 files in other folders)
